kubernetes/clearsessions.yml
apiVersion: v1
kind: Pod
metadata:
  name: django-clearsessions
  labels:
    app: django-app
    job: clearsessions
    app.kubernetes.io/name: django-clearsessions
    app.kubernetes.io/component: maintenance
spec:
  restartPolicy: Never
  containers:
  - name: clearsessions
    image: django_app:latest
    imagePullPolicy: IfNotPresent
    command: ["python", "manage.py", "clearsessions"]
