kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django-app
    app.kubernetes.io/name: django-app
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: django-app
        app.kubernetes.io/name: django-app
        app.kubernetes.io/component: backend
    spec:
      containers:
      - name: django-app
        image: django_app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
