kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django-app
    app.kubernetes.io/name: django-service
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app: django-app
  ports:
  - port: 80
    targetPort: 80
